policy/v1.1/rubric.md
# 代码质量检测底线规则与 Agent 判定标准

版本：V1.1  
日期：2026-07-15  
状态：团队评审与试点中  
历史设计参考：[AI 代码检查方案](../../2026-07-14-company-ai-code-review-overview.html)

> V1.1 继续只定义第一阶段必须拦住的严重低级错误，并把首次实战暴露出的判定、报告和资源约束变成可执行合同。本稿仍处于团队评审与试点阶段，不是固定的公司终版标准。

## 第一阶段范围摘要

| 项目 | 范围 |
|---|---|
| 检查范围 | 4 个底线维度 |
| 规则规模 | 20 条底线规则 |
| 阻断门槛 | `S3 + T3 + E2/E3`，并满足完整阻断公式 |
| 默认资源 | 最多 2 个 Agent：一个主 Agent，加至多一个批量验证 Agent |

## 目录

1. [目标与边界](#1-目标与边界)
2. [审查基线](#2-审查基线)
3. [四个底线维度](#3-四个底线维度)
4. [第一阶段 20 条底线规则](#4-第一阶段-20-条底线规则)
5. [判定机制](#5-判定机制)
6. [Agent 工作流与资源限制](#6-agent-工作流与资源限制)
7. [机器合同](#7-机器合同)
8. [规则验证矩阵](#8-规则验证矩阵)
9. [本轮评审问题](#9-本轮评审问题)

## 1. 目标与边界

第一阶段只守住生产底线，追求少报、报准，只阻断具备明确变更归因、现实触发事实、完整因果链和严重后果的底线缺陷。

**核心定义：** `PASS` 表示“没有发现满足阻断条件的底线缺陷”，不表示“代码优秀”。

存量问题只有在本次提交引入、扩大影响或使其可触发时，才进入阻断判断。

### 1.1 第一阶段需要拦住

- 方案方向明显错误，并会随真实业务规模快速恶化。
- 会直接产生严重业务错误、数据损坏或资金错误。
- 上线后会造成中断、资源失控、重试风暴或永久卡死。
- 会造成高影响安全事故、破坏性兼容变更或不可恢复发布。

### 1.2 第一阶段明确不评判

- 命名、格式、代码风格和注释完整度。
- 抽象是否优雅、少量重复和普通函数复杂度。
- 全面测试覆盖率与全面可观测性成熟度。
- 没有规模或运行依据的性能猜测。
- “还有更漂亮的写法”一类个人偏好。

## 2. 审查基线

必须先固定审查基线，再判断问题是否由本次变更引入。

CI 或调用方必须提供明确的 base、target 和 diff 选择理由。Agent 不得在 upstream diff 为空时静默改用更大的比较范围。

```yaml
repository:
target_branch:
base_commit:
target_commit:
diff_selection_reason:
changed_files:
affected_entries:
```

如果 `base_commit`、`target_commit` 或 `diff_selection_reason` 缺失，就无法证明 `introduced_or_worsened_by_change`。总体结果最高只能是 `INCOMPLETE` 或 `MANUAL_REVIEW`，不得为 `BLOCK`。

## 3. 四个底线维度

按“方案是否做对事情 → 结果是否正确 → 生产能否稳定运行 → 能否安全兼容地上线”的顺序检查。

| 维度 | 核心问题 | 严重影响 | 规则数 |
|---|---|---|---:|
| **D1 方案方向与数据流** | 代码是否在高质量地实现一个明显错误的业务方案？ | 工作量乘法放大、任务永远追不上、错误真相源、同步链路被批处理拖垮 | 5 |
| **D2 业务结果与数据安全** | 正常、异常、重复执行和边界条件下，业务结果与数据是否正确？ | 错误结果、非法状态、资金错误、部分写入、重复副作用 | 5 |
| **D3 生产稳定性** | 在失败、并发、资源增长和关闭过程中，系统是否会失控？ | 中断、雪崩、死锁、泄漏、无限重试、永久卡死 | 5 |
| **D4 安全与上线变更安全** | 是否会造成权限、输入、敏感数据、兼容性或迁移事故？ | 越权、注入、泄密、破坏调用方、身份映射断裂、数据丢失 | 5 |

## 4. 第一阶段 20 条底线规则

每条规则同时给出阻断边界和不得阻断的边界。先主动验证“不得阻断”的保护是否闭合风险路径；硬上限、超时、生命周期所有者、幂等机制或已验证迁移已经直接消除严重后果时不得保留候选。多个规则指向同一根因时必须合并，并归到最具体的变更根因；错误数据源选择即使同时违反明确契约或产生错误结果，仍优先归到更具体的 `DES-004`；算术、单位换算、溢出、舍入、分页或时区计算错误即使单位由契约给出，仍优先归到 `COR-003`，明确业务契约中的资格期限或阈值被改写则归到 `COR-001`；`CHG-001` 只用于兼容性本身是根因且已有调用方、配置或持久化身份有证据的情形，不是普通内部接口或实现变化的兜底分类。

### 4.1 D1 方案方向与数据流

#### `DES-001` 处理驱动方向

**底线规则：** 处理驱动方向不得明显颠倒，导致两个持续增长的集合形成乘法级工作量。

- **允许阻断的典型情形：** 调用链证明工作量接近 `N × M`，真实规模证明任务无法按期完成、成本失控或持续积压。
- **不得直接阻断的边界：** 某一维度有严格小上限；存在有界高效反向索引；缺少规模依据时只能人工确认。

#### `DES-002` 增量处理

**底线规则：** 存在自然增量游标或检查点时，不得在高频路径反复全量处理历史数据。

- **允许阻断的典型情形：** 任务每次从头扫描持续增长的历史集合，执行周期必然超过调度周期。
- **不得直接阻断的边界：** 数据集被明确限定；正确性要求全量校验且频率与成本已证明可接受。

#### `DES-003` 循环中的远程调用

**底线规则：** 不得在无界或持续增长的循环中逐条调用数据库、RPC 或第三方服务。

- **允许阻断的典型情形：** 远程请求随记录数线性或更高增长，且缺少批量、索引、分页或并发上限。
- **不得直接阻断的边界：** 列表有严格小上限；供应方只支持逐条调用且限流、调度和完成时间均有证据满足要求。

#### `DES-004` 权威数据源

**底线规则：** 不得选错权威数据源，或形成无法保证一致性的多个真相源。

- **允许阻断的典型情形：** 核心决策可能从冲突数据源读取，双写失败后没有恢复或确定优先级。
- **不得直接阻断的边界：** 缓存具有清晰版本、失效与回源机制；副本只用于读取加速。

#### `DES-005` 同步请求中的批处理

**底线规则：** 明显属于长耗时批处理的工作，不得直接放入同步请求关键链路。

- **允许阻断的典型情形：** 请求等待无界扫描、批量回填或大量外部调用，导致超时、连接耗尽或级联故障。
- **不得直接阻断的边界：** 工作量严格有界并满足延迟目标；异步会破坏明确强一致要求。

### 4.2 D2 业务结果与数据安全

#### `COR-001` 明确契约

**底线规则：** 实现不得与明确的业务规则、Spec 或公共接口契约相反。

- **允许阻断的典型情形：** 代码与已确认契约直接矛盾，并在明确输入下返回错误结果或执行错误动作。
- **不得直接阻断的边界：** 需求存在多种合理解释或尚未确认时只能人工确认。

#### `COR-002` 业务不变量

**底线规则：** 不得破坏关键业务不变量或允许系统进入非法状态。

- **允许阻断的典型情形：** 余额、库存、所有权、状态机、唯一性或领域约束可被明确路径破坏。
- **不得直接阻断的边界：** 不变量没有文档或代码依据；仅认为另一种设计更优。本次删除既有资金、所有权或状态保护且存在具体严重路径、但权威业务规则仍缺失时，应保留一个 `T2`/`E1` 人工确认候选。

#### `COR-003` 数值与边界计算

**底线规则：** 金额、数量、精度、时间、分页和边界计算不得产生明确错误。

- **允许阻断的典型情形：** 溢出、舍入、时区、单位、包含边界或游标错误造成资金、遗漏或重复处理。
- **不得直接阻断的边界：** 仅有格式偏好；误差由业务明确接受；没有实际触发输入。

#### `COR-004` 事务边界

**底线规则：** 事务边界不得使失败操作留下不可接受的部分成功状态。

- **允许阻断的典型情形：** 核心多步写入失败后留下无法自动恢复的不一致或错误对外状态。
- **不得直接阻断的边界：** 业务允许最终一致，且补偿、重试、对账和幂等路径完整可证。

#### `COR-005` 幂等与重复副作用

**底线规则：** 重试、重复请求或重复消费不得重复产生不可逆业务副作用。

- **允许阻断的典型情形：** 重复到达造成重复扣款、记账、发放、通知或外部操作。
- **不得直接阻断的边界：** 操作天然幂等，或唯一约束、幂等键和状态检查直接证明安全。

### 4.3 D3 生产稳定性

#### `REL-001` 无界资源增长

**底线规则：** 内存、并发数、goroutine、队列、循环和结果集不得随外部输入无界增长。

- **允许阻断的典型情形：** 用户流量或正常数据增长持续创建资源直到 OOM、连接耗尽或服务不可用。
- **不得直接阻断的边界：** 上游和本地都有可证明硬上限；资源按批释放且峰值满足容量。

#### `REL-002` 超时与取消

**底线规则：** 外部调用和长耗时操作必须具有必要的超时、取消或终止条件。

- **允许阻断的典型情形：** 下游不返回时永久占用请求、线程、连接或任务租约并持续积累。
- **不得直接阻断的边界：** 底层库统一强制超时；协议要求等待且有其他明确全局终止机制。

#### `REL-003` 并发正确性

**底线规则：** 不得存在可直接证明的数据竞争、死锁、丢失更新或顺序依赖错误。

- **允许阻断的典型情形：** 真实并发路径同时修改共享状态，导致结果丢失、卡死或重复处理。
- **不得直接阻断的边界：** 串行性、锁、事务隔离或单线程模型可从代码和配置直接证明。

#### `REL-004` 资源释放

**底线规则：** 文件、连接、锁、事务和后台任务必须能够正确释放或关闭。

- **允许阻断的典型情形：** 正常错误或取消路径持续泄漏关键资源，最终造成不可用或数据锁死。
- **不得直接阻断的边界：** 资源由框架托管并有明确生命周期；对象局部、短期且有硬上限。

#### `REL-005` 错误恢复

**底线规则：** 错误处理不得导致无限重试、重试风暴、进程崩溃、永久卡死或关键错误完全静默。

- **允许阻断的典型情形：** 稳定错误触发零间隔重试、永不确认消息、退出关键进程或吞掉数据错误。
- **不得直接阻断的边界：** 退出是受监督任务的明确恢复策略；上层统一记录、限次重试并告警。

### 4.4 D4 安全与上线变更安全

#### `SEC-001` 认证与授权

**底线规则：** 不得绕过认证、授权、角色、资源所有权或租户隔离。

- **允许阻断的典型情形：** 未授权主体通过明确请求读取、修改或执行受保护资源。
- **不得直接阻断的边界：** 入口由不可绕过的上层网关保护；资源本身明确公开；只有可直接调用的本地函数不足以证明外部路由可达或网关字段可伪造，缺少这些部署证据时最高为 `T2`/`E1`。

#### `SEC-002` 不可信输入

**底线规则：** 不可信输入不得未经约束进入查询、命令、模板、路径或网络请求。

- **允许阻断的典型情形：** 存在可构造的注入、目录穿越、SSRF、危险反序列化或命令执行路径。
- **不得直接阻断的边界：** 参数化、允许列表、规范化和目标限制直接证明输入无法改变执行结构。

#### `SEC-003` 敏感信息

**底线规则：** 密钥、令牌、密码和敏感业务数据不得被提交、输出或不当暴露。

- **允许阻断的典型情形：** 有效凭证进入仓库或响应；日志输出可复用凭证、完整隐私数据或签名材料。
- **不得直接阻断的边界：** 明确测试假数据；批准且不可逆脱敏的数据；仅凭变量名猜测敏感性。

#### `CHG-001` 兼容性规则族

**底线规则：** 不得在未声明和未处理兼容性的情况下破坏现有调用方、已有配置或稳定身份与所有权映射。

本规则包含三个强制子类：

1. **公共协议与接口兼容性：** 请求语法、认证方案、响应字段、状态码、事件和公开格式。
2. **配置语义兼容性：** 已有配置继续被读取并保持原意。
3. **持久化身份与所有权兼容性：** 用户、租户、资源所有权、幂等、缓存和外部账户稳定标识的派生方式。

- **允许阻断的典型情形：** 现有调用方解析失败；配置被静默忽略或改义；所有权键改变导致存量数据无法访问；滚动发布时新旧版本语义冲突。
- **不得直接阻断的边界：** 调用方与服务原子发布且有证据；完整版本化迁移、双读或兼容路径已验证；接口尚未发布且无使用方。

#### `CHG-002` 迁移与滚动发布安全

**底线规则：** 数据迁移和发布方式不得造成数据丢失、不可恢复状态、关键表长期阻塞或新旧版本无法共存。

- **允许阻断的典型情形：** 删除或重写生产数据、先部署依赖尚不存在结构的代码，且无安全迁移路径。
- **不得直接阻断的边界：** 小型受控数据集；已有备份、分阶段迁移、回填验证和回滚演练证据。

## 5. 判定机制

后果、触发确定性与证据共同决定结果，三轴不得相互代替：S 描述具体条件一旦触发的后果，T 描述当前环境是否已被证明满足该条件，E 描述仓库证据是否闭合从入口到后果的路径。严重后果不代表当前环境一定会触发；缺少规模、部署、权威来源、现有调用方或包装器语义时，E 最高为 `E1`，通常只能形成 `T2` 的人工确认候选。

### 5.1 后果严重度

| 等级 | 定义 | 第一阶段处理 |
|---|---|---|
| `S3` 严重 | 触发后造成中断、关键数据损坏、资金错误、高影响越权、不可恢复发布或不可控成本 | 进入阻断候选 |
| `S2` 有限 | 问题真实但影响有限或容易恢复 | 提醒人工，不自动阻断 |
| `S1` 改进 | 工程、维护性或风格建议 | 不进入正式问题列表 |

### 5.2 触发确定性

| 等级 | 定义 | 处理 |
|---|---|---|
| `T3` 已证明 | 目标部署、现有配置、真实调用方或确定输入会触发 | 满足其他门槛时可进入阻断 |
| `T2` 条件现实 | 触发条件具体且现实，但尚未证明当前环境满足 | `MANUAL_REVIEW` |
| `T1` 理论风险 | 只有模式或理论可能性 | 不得阻断 |

### 5.3 证据等级

| 等级 | 定义 | 协议结论边界 |
|---|---|---|
| `E3` 已验证 | 测试、命令、日志、静态工具或最小复现证实 | 实际请求、测试或复现验证 |
| `E2` 代码证实 | 真实入口到生产影响可完整推导 | 必须引用仓库契约、官方标准、框架行为或既有测试 |
| `E1` 存疑 | 缺少业务、规模、运行或权威契约 | 只凭模型记忆最高为 `E1` |

依赖 HTTP、SQL、RPC、消息协议或第三方接口标准的结论，只有具备仓库契约、官方标准、框架行为或既有测试依据时才能达到 `E2`；仓库未闭合当前部署、存量数据或迁移执行事实时，即使条件性代码路径清晰也只能为 `E1`。只凭模型记忆最高为 `E1`；通过最小复现或实际测试可以达到 `E3`。

### 5.4 唯一阻断公式

```text
BLOCK =
    severity == S3
    AND trigger_confidence == T3
    AND evidence_level IN (E2, E3)
    AND introduced_or_worsened_by_change == true
    AND trigger_condition_is_concrete == true
    AND causal_chain_is_complete == true
    AND finding_is_not_style_preference == true
```

### 5.5 判定边界

```text
S3 + T3 + E2/E3 + 本次引入 + 完整因果链 → BLOCK
S3 + T2 + E2/E3 → MANUAL_REVIEW
S2 + T3 + E3 → MANUAL_REVIEW
报告字段缺失或基线不明确 → INCOMPLETE
```

### 5.6 总体结果

- **`PASS`：** 未发现达到正式报告阈值的底线缺陷；已经闭合风险路径的保护应得到 PASS，不表示代码优秀。
- **`MANUAL_REVIEW`：** 本次变更存在具体且现实的严重风险路径，但规模、部署、权威来源、调用方或包装器语义不足以证明当前触发；不得仅因“可能还有外部上下文”而制造候选。
- **`BLOCK`：** 本次改动引入或加重了满足完整公式的底线缺陷。
- **`INCOMPLETE`：** 基线不明确、强制字段缺失、枚举非法、检查超时或执行失败。

总体结果优先级：

```text
INCOMPLETE > BLOCK > MANUAL_REVIEW > PASS
```

`INCOMPLETE` 不能当作 `PASS`。

## 6. Agent 工作流与资源限制

Agent 可以阅读改动之外的相关代码，但发现必须与明确审查基线有关。普通 CI 负责稳定工具检查。

### 6.1 执行步骤

1. 确认 base/target、改动目标和实际改变的行为。
2. 找到真实入口，追踪调用链、数据流和副作用。
3. 只激活与本次改动相关的规则族。
4. 形成候选并合并相同根因。
5. 验证是否由本次改动引入或加重。
6. 仅当存在潜在 `BLOCK` 候选时，把全部候选一次性交给至多一个批量验证 Agent。
7. 输出机器合同，由普通程序计算最终 verdict。

### 6.2 硬资源限制

- **总 Agent 数硬上限为 2：一个主 Agent，加至多一个批量验证 Agent。**
- 不得为每条规则、每个文件或每个角度分别启动 Agent。
- 没有候选时不得启动验证 Agent。
- V1 不提供超限配置或人工放宽路径。
- 报告记录实际 Agent 数、verifier 数，以及可获得的 token、耗时和重试指标。
- 自然语言“节制使用”不能替代执行器硬上限。

## 7. 机器合同

每条发现必须可校验、可定位、可行动。模型负责收集事实和解释因果链；普通程序负责校验字段并计算最终 verdict。

### 7.1 单条发现强制字段

```yaml
rule_id:
verdict:
severity:
trigger_confidence:
evidence_level:
introduced_or_worsened_by_change:
code_locations:
affected_call_path:
trigger_condition:
causal_chain:
production_impact:
verification_performed:
minimal_fix:
uncertainties:
```

字段要求：

- `verdict` 只能是 `PASS`、`MANUAL_REVIEW` 或 `BLOCK`；单条发现通常只使用后两者。
- `severity` 只能是 `S1`、`S2`、`S3`。
- `trigger_confidence` 只能是 `T1`、`T2`、`T3`。
- `evidence_level` 只能是 `E1`、`E2`、`E3`。
- `code_locations` 至少包含一个仓库相对路径和行号。
- `affected_call_path` 必须从真实入口开始。
- `trigger_condition` 必须给出具体输入、配置、规模或运行状态。
- `causal_chain` 必须说明代码行为如何导致生产影响。
- `verification_performed` 记录实际运行的测试、命令或引用的契约；未执行验证时必须明确写 `none` 和原因。
- `uncertainties` 为空时使用空数组，不得省略。

### 7.2 报告级强制内容

- 完整审查基线和实际受影响入口。
- 实际读取的项目说明、Spec、契约和普通 CI 证据。
- 激活的规则族和未激活原因。
- 未检查范围和缺失上下文。
- Agent、Skill、规则集和 schema 版本。
- Agent 数、验证数、token、耗时和失败重试。
- 总体结果：`PASS`、`MANUAL_REVIEW`、`BLOCK` 或 `INCOMPLETE`。

字段缺失、枚举非法、`affected_call_path` 不从真实入口开始或 `causal_chain` 为空时，模型声称的 `BLOCK` 必须被降级或将报告标记为 `INCOMPLETE`。

普通校验程序负责根据字段和阻断公式计算最终 verdict。模型不能仅凭自然语言直接阻断。

## 8. 规则验证矩阵

每条规则成为自动阻断候选前，至少需要三个案例：

1. **正例：** 应命中的真实或最小化严重缺陷，用于验证规则召回和归类。
2. **反例：** 外观相似但具有硬上限、兼容路径或充分保护的正常代码，不得阻断。
3. **证据不足案例：** 后果可能严重，但缺少当前配置、调用方、规模或权威契约，应输出 `MANUAL_REVIEW`。

每个严重案例至少重复运行三次，并记录：

- 是否命中正确规则；
- `severity`、`trigger_confidence` 和 `evidence_level` 是否稳定；
- 是否产生重复根因；
- 人工是否确认及推翻原因；
- Agent 数、token 和耗时。

V1 进入 report-only 试点时，每个合成案例只运行一次：正例要求发现经 verifier 确认的高风险，反例和证据不足案例要求不得输出 `BLOCK` 或 `INCOMPLETE`，精确 rule ID 与 S/T/E 一致性不作为门槛。上述三次重复与精确稳定性只用于未来自动阻断资格；未通过三类案例的规则不得参与自动阻断。

## 9. 本轮评审问题

1. S/T/E 三轴边界是否足以区分严重上限和当前触发事实？
2. `CHG-001` 的三个兼容性子类是否覆盖常见协议、配置和身份回归？
3. 哪些规则最容易停留在 `T2` 或 `E1`，需要项目提供什么上下文？
4. 最多 2 个 Agent 的单批量 verifier 合同是否满足质量与成本平衡？
5. 机器合同字段是否足以让普通程序稳定计算 verdict？
6. 首批历史回放能否为每条拟阻断规则提供正例、反例和证据不足案例？

---

代码质量检测底线规则 V1.1 · 团队评审与试点稿 · 2026-07-15
